{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 329,
  "lineage": "273fa719-9dc5-0ba3-3d4e-ddcac8d781bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "a4l_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:internet-gateway/igw-05e4f70120290a5c0",
            "id": "igw-05e4f70120290a5c0",
            "owner_id": "633620335195",
            "tags": {
              "Name": "A4L-IGW"
            },
            "tags_all": {
              "Name": "A4L-IGW"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "a4l_wordpress_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:633620335195:loadbalancer/app/A4LWORDPRESSALB/46941145df6bf0e2",
            "arn_suffix": "app/A4LWORDPRESSALB/46941145df6bf0e2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "A4LWORDPRESSALB-882074042.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:633620335195:loadbalancer/app/A4LWORDPRESSALB/46941145df6bf0e2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "A4LWORDPRESSALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d006c5e315ceb74b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09542c9c91b34f849"
              },
              {
                "subnet_id": "subnet-0ca8c3a6d1cd30230"
              },
              {
                "subnet_id": "subnet-0f95af12edb23fef3"
              }
            ],
            "subnets": [
              "subnet-09542c9c91b34f849",
              "subnet-0ca8c3a6d1cd30230",
              "subnet-0f95af12edb23fef3"
            ],
            "tags": {
              "Name": "A4LWORDPRESSALB"
            },
            "tags_all": {
              "Name": "A4LWORDPRESSALB"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_load_balancer",
            "aws_subnet.sn_pub_a",
            "aws_subnet.sn_pub_b",
            "aws_subnet.sn_pub_c",
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:633620335195:listener/app/A4LWORDPRESSALB/46941145df6bf0e2/f38ef5b58a3fdd70",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:633620335195:targetgroup/A4LWORDPRESSALBTG/70b6aef48e30b467",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:633620335195:listener/app/A4LWORDPRESSALB/46941145df6bf0e2/f38ef5b58a3fdd70",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:633620335195:loadbalancer/app/A4LWORDPRESSALB/46941145df6bf0e2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.a4l_wordpress_alb",
            "aws_lb_target_group.a4l_wordpress_albtg",
            "aws_security_group.sg_load_balancer",
            "aws_subnet.sn_pub_a",
            "aws_subnet.sn_pub_b",
            "aws_subnet.sn_pub_c",
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "a4l_wordpress_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:633620335195:targetgroup/A4LWORDPRESSALBTG/70b6aef48e30b467",
            "arn_suffix": "targetgroup/A4LWORDPRESSALBTG/70b6aef48e30b467",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:633620335195:targetgroup/A4LWORDPRESSALBTG/70b6aef48e30b467",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "A4LWORDPRESSALBTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "A4LWORDPRESSALBTG"
            },
            "tags_all": {
              "Name": "A4LWORDPRESSALBTG"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt_pub_default_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05e4f70120290a5c0",
            "id": "r-rtb-05488c2423e96ded11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05488c2423e96ded1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.a4l_igw",
            "aws_route_table.rt_public",
            "aws_vpc.a4l_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:route-table/rtb-05488c2423e96ded1",
            "id": "rtb-05488c2423e96ded1",
            "owner_id": "633620335195",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "A4L-vpc-rt-pub"
            },
            "tags_all": {
              "Name": "A4L-vpc-rt-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.a4l_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb9b3827c9c08cd",
            "route_table_id": "rtb-05488c2423e96ded1",
            "subnet_id": "subnet-0f95af12edb23fef3"
          },
          "dependencies": [
            "aws_route_table.rt_public",
            "aws_subnet.sn_pub_a",
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4f1bf0a1f9975d2",
            "route_table_id": "rtb-05488c2423e96ded1",
            "subnet_id": "subnet-09542c9c91b34f849"
          },
          "dependencies": [
            "aws_route_table.rt_public",
            "aws_subnet.sn_pub_b",
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06930d9508cce7938",
            "route_table_id": "rtb-05488c2423e96ded1",
            "subnet_id": "subnet-0ca8c3a6d1cd30230"
          },
          "dependencies": [
            "aws_route_table.rt_public",
            "aws_subnet.sn_pub_c",
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:security-group/sg-03e157056b29c796c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e157056b29c796c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from WordPress instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0232a3b7b576cab3c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "A4LVPC-SGDatabase",
            "name_prefix": "",
            "owner_id": "633620335195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "A4LVPC-SGDatabase"
            },
            "tags_all": {
              "Name": "A4LVPC-SGDatabase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_load_balancer",
            "aws_security_group.sg_wordpress",
            "aws_vpc.a4l_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:security-group/sg-0f88feeedc1d68a9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f88feeedc1d68a9f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow NFS/EFS from WordPress instances",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0232a3b7b576cab3c"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "A4LVPC-SGEFS",
            "name_prefix": "",
            "owner_id": "633620335195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "A4LVPC-SGEFS"
            },
            "tags_all": {
              "Name": "A4LVPC-SGEFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_load_balancer",
            "aws_security_group.sg_wordpress",
            "aws_vpc.a4l_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:security-group/sg-0d006c5e315ceb74b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d006c5e315ceb74b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-LoadBalancer",
            "name_prefix": "",
            "owner_id": "633620335195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-LoadBalancer"
            },
            "tags_all": {
              "Name": "SG-LoadBalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.a4l_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:security-group/sg-0232a3b7b576cab3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0232a3b7b576cab3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP only from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d006c5e315ceb74b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-Wordpress",
            "name_prefix": "",
            "owner_id": "633620335195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Wordpress"
            },
            "tags_all": {
              "Name": "SG-Wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_load_balancer",
            "aws_vpc.a4l_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-0518947db42cd016c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0518947db42cd016c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-app-A"
            },
            "tags_all": {
              "Name": "sn-app-A"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-0b94a51d3b380c044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b94a51d3b380c044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-app-B"
            },
            "tags_all": {
              "Name": "sn-app-B"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-0fe6271f0d49aec6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe6271f0d49aec6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-app-C"
            },
            "tags_all": {
              "Name": "sn-app-C"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-0cce60dda53f6fcd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cce60dda53f6fcd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-db-A"
            },
            "tags_all": {
              "Name": "sn-db-A"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-0be93afb45e86917e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be93afb45e86917e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-db-B"
            },
            "tags_all": {
              "Name": "sn-db-B"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-09254fccba52bb150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09254fccba52bb150",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-db-C"
            },
            "tags_all": {
              "Name": "sn-db-C"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-0f95af12edb23fef3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f95af12edb23fef3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-pub-A"
            },
            "tags_all": {
              "Name": "sn-pub-A"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-09542c9c91b34f849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09542c9c91b34f849",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-pub-B"
            },
            "tags_all": {
              "Name": "sn-pub-B"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:subnet/subnet-0ca8c3a6d1cd30230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca8c3a6d1cd30230",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633620335195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-pub-C"
            },
            "tags_all": {
              "Name": "sn-pub-C"
            },
            "vpc_id": "vpc-0d95c3ed7675b3afb"
          },
          "dependencies": [
            "aws_vpc.a4l_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "a4l_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633620335195:vpc/vpc-0d95c3ed7675b3afb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-024dd08c1e92f8eb0",
            "default_route_table_id": "rtb-0a1453db308952465",
            "default_security_group_id": "sg-02b700febf7332ec1",
            "dhcp_options_id": "dopt-0b49bdea05656e301",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d95c3ed7675b3afb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1453db308952465",
            "owner_id": "633620335195",
            "tags": {
              "Name": "A4LVPC"
            },
            "tags_all": {
              "Name": "A4LVPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}